--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,9 @@ jobs:
           no_output_timeout: 20m
           command: |
             cd ~
-            git clone --depth=1 https://github.com/kdrag0n/proton-clang
+            mkdir clang && wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-r399163.tar.gz -O clang.tar.gz && tar -xzf clang.tar.gz -C clang && rm clang.tar.gz
+            git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9 --depth=1 toolchain
+            git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9 --depth=1 toolchain-arm
             git clone https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME --depth=1 kernel
 
       - run:
@@ -24,15 +26,13 @@ jobs:
           no_output_timeout: 20m
           command: |
             cd ~/kernel
-            export PATH="/root/proton-clang/bin:$PATH"
+            export CROSS_COMPILE=$HOME/toolchain/bin/aarch64-linux-android-
+            export PATH="/root/clang/bin:/root/toolchain/bin:/root/toolchain-arm/bin:$PATH"
             export ARCH=arm64
             export SUBARCH=arm64
-            export USE_CCACHE=1
-            export CROSS_COMPILE=aarch64-linux-gnu-
-            export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
             make clean && make mrproper O=output
             make vendor/fenix_defconfig O=output
-            make -j$(nproc --all) CC=clang  CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi- O=output
+            make -j$(nproc --all) CC=/root/clang/bin/clang CROSS_COMPILE=/root/toolchain/bin/aarch64-linux-android- CLANG_TRIPLE=/root/clang/bin/aarch64-linux-gnu- CROSS_COMPILE_ARM32=/root/toolchain-arm/bin/arm-linux-androideabi- O=output
 
       - run:
           name: Send to telegram
