--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
           no_output_timeout: 20m
           command: |
             cd ~/kernel
-            export CROSS_COMPILE=$HOME/toolchain/bin/aarch64-linux-android-
-            export PATH="/root/clang/bin:/root/toolchain/bin:/root/toolchain-arm/bin:$PATH"
-            export ARCH=arm64
-            export SUBARCH=arm64
+            sudo  export CROSS_COMPILE=$HOME/toolchain/bin/aarch64-linux-android-
+            sudo export PATH="/root/clang/bin:/root/toolchain/bin:/root/toolchain-arm/bin:$PATH"
+            sudo export ARCH=arm64
+            sudo export SUBARCH=arm64
             sudo make clean && make mrproper O=output
             sudo make vendor/fenix_defconfig O=output
             sudo make -j$(nproc --all) CC=/root/clang/bin/clang CROSS_COMPILE=/root/toolchain/bin/aarch64-linux-android- CLANG_TRIPLE=/root/clang/bin/aarch64-linux-gnu- CROSS_COMPILE_ARM32=/root/toolchain-arm/bin/arm-linux-androideabi- O=output
